--- a/product.html
+++ b/product.html
@@ -44,7 +44,7 @@
                                 <a class="nav-link mx-2" href="product.html">Products</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link mx-2" href="#">Contact Us</a>
+                                <a class="nav-link mx-2" href="contact.html">Contact Us</a>
                             </li>
                         </ul>
                         <span class="nav-item">
@@ -116,7 +116,7 @@
                         <li><a class="text-white" href="index.html">Home</a></li>
                         <li><a class="text-white" href="about-us.html">About Us</a></li>
                         <li><a class="text-white" href="product.html">Our Products</a></li>
-                        <li><a class="text-white" href="#">Contact Us</a></li>
+                        <li><a class="text-white" href="contact.html">Contact Us</a></li>
                     </ul>
                 </div>
                 <div class="col-md-4">
