--- a/contact.html
+++ b/contact.html
@@ -9,11 +9,10 @@
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link href="https://fonts.cdnfonts.com/css/trajan-pro" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-
     <link rel="stylesheet" href="style-four.css">
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -94,6 +93,87 @@
         </div>
     </section>
 
+    <section class=" container-fluid our-branches pt-3" data-aos="fade-down">
+        <h1 class="title-contact text-center mt-3">
+            OUR BRANCHES
+        </h1>
+        <div class="trident-branch">
+            <p class="text-center text-must-visit">MUST VISIT US AT: <br> HOTEL TRIDENT NARIMAN POINT MUMBAI 400 021.
+            </p>
+            <div class="row text-center g-0">
+                <div class="col-lg-2">
+                    <video autoplay loop muted class="video-1">
+                        <source src="videos/ZIARAT PERFUMES 1.mp4" type="video/mp4">
+                    </video>
+                </div>
+                <div class="col-lg-2">
+                    <video autoplay loop muted class="video-1">
+                        <source src="videos/ZIARAT PERFUMES 2.mp4" type="video/mp4">
+                    </video>
+                </div>
+                <div class="col-lg-2">
+                    <video autoplay loop muted class="video-1">
+                        <source src="videos/ZIARAT PERFUMES 3.mp4" type="video/mp4">
+                    </video>
+                </div>
+                <div class="col-lg-2">
+                    <video autoplay loop muted class="video-1">
+                        <source src="videos/ZIARAT PERFUMES 4.mp4" type="video/mp4">
+                    </video>
+                </div>
+                <div class="col-lg-2">
+                    <video autoplay loop muted class="video-1">
+                        <source src="videos/ZIARAT PERFUMES 5.mp4" type="video/mp4">
+                    </video>
+                </div>
+                <div class="col-lg-2">
+                    <video autoplay loop muted class="video-1">
+                        <source src="videos/ZIARAT PERFUMES 6.mp4" type="video/mp4">
+                    </video>
+                </div>
+            </div>
+        </div>
+        <div class="trident-branch mt-4">
+            <p class="text-center text-must-visit">MUST VISIT US AT: <br> MOHAMMED ALI ROAD
+            </p>
+            <div class="row pb-4 text-center g-0">
+                <div class="col-lg-3">
+                    <img src="images/MOHD 1.JPG" class="img-fluid images-mohd" alt="" srcset="">
+                </div>
+                <div class="col-lg-3">
+                    <img src="images/MOHD 2.JPG" class="img-fluid images-mohd" alt="" srcset="">
+                </div>
+                <div class="col-lg-3">
+                    <img src="images/MOHD 3.JPG" class="img-fluid images-mohd" alt="" srcset="">
+                </div>
+                <div class="col-lg-3">
+                    <img src="images/MOHD 4.JPG" class="img-fluid images-mohd" alt="" srcset="">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="container-fluid maps bg-light" data-aos="fade-up">
+        <h1 class="title-contact text-center mt-3 ">
+            VIA MAPS
+        </h1>
+        <div class="row pt-3 text-center ">
+            <div class="col-lg-6">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3773.5020493572006!2d72.8310098750973!3d18.953422582226104!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7ce23594b9849%3A0x5b82dd9c7162691c!2sZiarat%20Perfumes!5e0!3m2!1sen!2sin!4v1688637451367!5m2!1sen!2sin"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe> <br>
+                <p class="map-text">MOHD ALI ROAD BRANCH</p>
+            </div>
+            <div class="col-lg-6"><iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3774.082760269566!2d72.81862357509667!3d18.927730582246614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7d1ef25d1fdc1%3A0xe3f924327fd9fdef!2sTrident%20Hotel%2C%20Nariman%20Point%20Mumbai!5e0!3m2!1sen!2sin!4v1688637553357!5m2!1sen!2sin"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe> <br>
+                <p class="map-text">TRIDENT HOTEL NARIMAN PPOINT BRANCH</p>
+            </div>
+        </div>
+    </section>
+
     <footer class="footer bg-black text-white">
         <div class="container">
             <div class="row g-0 ">
@@ -147,6 +227,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
         integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
     <script>
         const navbarToggler = document.querySelector('.navbar-toggler');
@@ -154,6 +235,9 @@
         navbarToggler.addEventListener('click', () => {
             navbarToggler.classList.toggle('active');
         });
+    </script>
+    <script>
+        AOS.init();
     </script>
 
 </body>
