--- a/about-us.html
+++ b/about-us.html
@@ -13,6 +13,8 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
 </head>
 
 <body>
@@ -55,7 +57,7 @@
     </section>
 
 
-    <section class="container-fluid">
+    <section class="container-fluid" data-aos="flip-down">
         <div class="about-us">
             <h1 class="title-abt text-center my-4">
                 ABOUT US
@@ -80,7 +82,7 @@
             </div>
     </section>
 
-    <section class="container-fluid">
+    <section class="container-fluid" data-aos="flip-up">
         <div class="what-we-sec">
             <h1 class="title-abt text-center my-4">WHAT WE CAN DO</h1>
 
@@ -134,12 +136,12 @@
         <h1 class="title-abt text-center my-3">FOUNDER</h1>
         <div class="row  align-items-center">
             <div class="col-lg-6 text-center">
-                <img src="images/saalem.jpg" class="img-founder  img-fluid" alt="">
+                <img src="images/saalem.jpg" class="img-founder  img-fluid" data-aos="flip-left" alt="">
                 <h1 class="name-founder my-4">MOHD. SAALEM KHAN <br> <span class="director-text"> (DIRECTOR)
                     </span></h1>
             </div>
             <div class="col-lg-6">
-                <p class="founder-phrase text-center">
+                <p class="founder-phrase text-center" data-aos="flip-right">
                     <span class="tag-about-us mb-5"><i> <b> WHAT OUR FOUNDER SAYS ?</b> </i> <br> <br></span>
                     <i> "Welcome to our perfume world, where scents come alive. As
                         the
@@ -207,6 +209,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
         integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
 
     <script>
         $(document).ready(function () {
@@ -272,6 +276,9 @@
         navbarToggler.addEventListener('click', () => {
             navbarToggler.classList.toggle('active');
         });
+    </script>
+    <script>
+        AOS.init();
     </script>
 
 </body>
