--- a/contact.html
+++ b/contact.html
@@ -159,13 +159,13 @@
         </h1>
         <div class="row pt-3 text-center ">
             <div class="col-lg-6">
-                <iframe
+                <iframe class="img-fluid"
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3773.5020493572006!2d72.8310098750973!3d18.953422582226104!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7ce23594b9849%3A0x5b82dd9c7162691c!2sZiarat%20Perfumes!5e0!3m2!1sen!2sin!4v1688637451367!5m2!1sen!2sin"
                     width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe> <br>
                 <p class="map-text">MOHD ALI ROAD BRANCH</p>
             </div>
-            <div class="col-lg-6"><iframe
+            <div class="col-lg-6"><iframe class="img-fluid"
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3774.082760269566!2d72.81862357509667!3d18.927730582246614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7d1ef25d1fdc1%3A0xe3f924327fd9fdef!2sTrident%20Hotel%2C%20Nariman%20Point%20Mumbai!5e0!3m2!1sen!2sin!4v1688637553357!5m2!1sen!2sin"
                     width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe> <br>
