--- a/contact.html
+++ b/contact.html
@@ -103,12 +103,12 @@
             <div class="row text-center g-0">
                 <div class="col-lg-2">
                     <video autoplay loop muted class="video-1">
-                        <source src="videos/ZIARAT PERFUMES 1.mp4" type="video/mp4">
+                        <source src="videos/ZIARAT PERFUMES 2.mp4" type="video/mp4">
                     </video>
                 </div>
                 <div class="col-lg-2">
                     <video autoplay loop muted class="video-1">
-                        <source src="videos/ZIARAT PERFUMES 2.mp4" type="video/mp4">
+                        <source src="videos/ZIARAT PERFUMES.mp4" type="video/mp4">
                     </video>
                 </div>
                 <div class="col-lg-2">
@@ -117,17 +117,17 @@
                     </video>
                 </div>
                 <div class="col-lg-2">
-                    <video autoplay loop muted class="video-1">
+                    <video autoplay loop muted class="video-1 video-2">
                         <source src="videos/ZIARAT PERFUMES 4.mp4" type="video/mp4">
                     </video>
                 </div>
                 <div class="col-lg-2">
-                    <video autoplay loop muted class="video-1">
+                    <video autoplay loop muted class="video-1 video-2">
                         <source src="videos/ZIARAT PERFUMES 5.mp4" type="video/mp4">
                     </video>
                 </div>
                 <div class="col-lg-2">
-                    <video autoplay loop muted class="video-1">
+                    <video autoplay loop muted class="video-1 video-2">
                         <source src="videos/ZIARAT PERFUMES 6.mp4" type="video/mp4">
                     </video>
                 </div>
