--- a/product.html
+++ b/product.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ZIARAT PERFUMERS</title>
+    <title>Z.P | PRODUCTS</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
@@ -158,6 +158,8 @@
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="form-floating mb-3">
+                                <input type="hidden" id="productName" class="" value="">
+
                                 <input type="name" class="form-control" id="floatingInput" placeholder="name">
                                 <label for="floatingInput">Name</label>
                             </div>
@@ -166,7 +168,7 @@
                                 <label for="floatingTextarea">Address</label>
                             </div>
                             <div class="form-floating mb-3">
-                                <input type="email" class="form-control" id="floatingInput"
+                                <input type="email" class="form-control" id="floatingInputemail"
                                     placeholder="name@example.com">
                                 <label for="floatingInput">Email address</label>
                             </div>
@@ -179,7 +181,8 @@
                         </div>
                         <div class="col-6">
                             <div class="form-floating mb-3">
-                                <input type="number" class="form-control" id="floatingInput" placeholder="1234567890">
+                                <input type="number" class="form-control" id="floatingInputqty"
+                                    placeholder="1234567890">
                                 <label for="floatingInput">Qty:</label>
                             </div>
                         </div>
@@ -195,9 +198,11 @@
                 </div>
 
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal">BUY NOW</button>
+                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal"
+                        onclick="buyProduct(document.getElementById('productName').value)">Buy Now</button>
+
                     <!-- <button type="button" class="btn btn-secondary">Close</button> -->
-                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal">ADD TO CART</button>
+                    <!-- <button type="button" class="btn btn-primary" data-bs-dismiss="modal" >ADD TO CART</button> -->
                 </div>
             </div>
         </div>
@@ -452,7 +457,7 @@
                                 <h5 class="card-title product-card-title">${product.title}</h5>
                                 <p class="card-text des-text">${product.description}</p>
                                 <p class="card-text price-text">₹${product.price}</p>
-                                <button class="btn  w-100 btn-outline-primary text-align-bottom text-center" data-bs-toggle="modal" data-bs-target="#exampleModal" onclick="buyProduct('${product.title}')">Buy</button>
+                                <button class="btn w-100 btn-outline-primary text-align-bottom text-center" data-bs-toggle="modal" data-bs-target="#exampleModal" onclick="setProductName('${product.title}')">Buy</button>
                             </div>
                         </div>
                     </div>
@@ -486,10 +491,33 @@
             currentPage = 1;
             generateProductGrid();
         }
+        function buyProduct(productName) {
+            const name = document.getElementById('floatingInput').value;
+            const address = document.getElementById('floatingTextarea').value;
+            const email = document.getElementById('floatingInputemail').value;
+            const mobileNumber = document.getElementById('mobilenumber').value;
+            const qty = document.getElementById('floatingInputqty').value;
 
-        function buyProduct(title) {
-            alert(`You clicked the buy button for ${title}`);
+            const message = `I want to buy this product
+            Product: ${productName}
+            Name: ${name}
+            Address: ${address}
+            Email: ${email}
+            Mobile Number: ${mobileNumber}
+            Quantity: ${qty}`;
+
+            const whatsappLink = `https://wa.me/7977027359?text=${encodeURIComponent(message)}`;
+            window.open(whatsappLink, '_blank');
         }
+
+        function setProductName(productName) {
+            const productNameInput = document.getElementById('productName');
+            productNameInput.value = productName;
+        }
+
+
+
+
 
         function previousPage() {
             if (currentPage > 1) {
